--- a/Frost ToolBox/Frost ToolBox.csproj
+++ b/Frost ToolBox/Frost ToolBox.csproj
@@ -13,6 +13,9 @@
     <DefaultLanguage>zh-cn</DefaultLanguage>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Assets\101868504_p0.jpg" />
+    <None Remove="Assets\89589460_p0.png" />
+    <None Remove="Pages\HomePage.xaml" />
     <None Remove="Pages\PicScalePage.xaml" />
     <None Remove="Pages\TagManagerPage.xaml" />
   </ItemGroup>
@@ -30,6 +33,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
@@ -40,6 +44,11 @@
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\HomePage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\TagManagerPage.xaml">
