--- a/Frost ToolBox/FrostLeaf ToolBox.csproj
+++ b/Frost ToolBox/FrostLeaf ToolBox.csproj
@@ -3,7 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
-    <RootNamespace>Frost_ToolBox</RootNamespace>
+    <RootNamespace>FrostLeaf_ToolBox</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Platforms>x86;x64;ARM64</Platforms>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
@@ -11,13 +11,20 @@
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
     <DefaultLanguage>zh-cn</DefaultLanguage>
+    <PackageCertificateThumbprint>A58AE9647072F903BCF5DB8A3CBDD6A4B8BCC515</PackageCertificateThumbprint>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <AssemblyName>FrostLeaf ToolBox</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Assets\101868504_p0.jpg" />
     <None Remove="Assets\89589460_p0.png" />
+    <None Remove="Pages\Dialog\ResetSettings.xaml" />
     <None Remove="Pages\HomePage.xaml" />
     <None Remove="Pages\PicScalePage.xaml" />
+    <None Remove="Pages\SettingPage.xaml" />
     <None Remove="Pages\TagManagerPage.xaml" />
+    <None Remove="Settings\settings.json" />
+    <None Remove="Settings\settings_default.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,11 +35,15 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="Settings\settings.json" />
+    <Content Include="Settings\settings_default.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Labs.WinUI.SettingsControls" Version="0.0.18" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
@@ -57,6 +68,19 @@
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\PicScalePage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Settings\Projects\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\ContentDialog\ResetSettings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\SettingPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
