--- a/Frost ToolBox/FrostLeaf ToolBox.csproj
+++ b/Frost ToolBox/FrostLeaf ToolBox.csproj
@@ -19,12 +19,16 @@
     <None Remove="Assets\101868504_p0.jpg" />
     <None Remove="Assets\89589460_p0.png" />
     <None Remove="Pages\Dialog\ResetSettings.xaml" />
+    <None Remove="Pages\GameStartPage.xaml" />
+    <None Remove="Pages\Game\GameStartHomePage.xaml" />
+    <None Remove="Pages\Game\MinecraftPage.xaml" />
     <None Remove="Pages\HomePage.xaml" />
     <None Remove="Pages\PicScalePage.xaml" />
     <None Remove="Pages\SettingPage.xaml" />
     <None Remove="Pages\TagManagerPage.xaml" />
     <None Remove="Settings\settings.json" />
     <None Remove="Settings\settings_default.json" />
+    <None Remove="Versions\versions.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,6 +41,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Settings\settings.json" />
     <Content Include="Settings\settings_default.json" />
+    <Content Include="Versions\versions.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -73,6 +78,21 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Settings\Projects\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\Game\MinecraftPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\Game\GameStartHomePage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\GameStartPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\ContentDialog\ResetSettings.xaml">
